examples/error/hierachical_modelling/paraInlinePPError/error-GCC.errorOutput
submodel/Untergruppe.xml:60: Caught octave exception 'errorNoneExistendVariable' undefined near line 1, column 1
submodel/Untergruppe.xml:57: included from here
Hauptgruppe.xml:38: [ecount=1] included from here
MBS.mbsim.xml:18: [ecount=1] included from here
MBS.mbsx:8: [ecount=1] included from here
